--- a/public/assets/css/app_estilo.css
+++ b/public/assets/css/app_estilo.css
@@ -55,3 +55,13 @@ th, td, md-input-container {
 md-button{
   width: 50%;
 }
+
+.listdemoBasicUsage md-divider {
+  margin-top: 10px;
+  margin-bottom: 0; 
+}
+
+.md-toolbar-tools-estilo2{
+  background-color:  #82B1FF;
+  color:  #FFFFFF;
+}
