--- a/public/assets/css/app_estilo.css
+++ b/public/assets/css/app_estilo.css
@@ -65,3 +65,9 @@ md-button{
   background-color:  #82B1FF;
   color:  #FFFFFF;
 }
+
+#map{
+  width: 100%; 
+  height: 100%; 
+  position: absolute;
+}
