--- a/public/assets/css/app_estilo.css
+++ b/public/assets/css/app_estilo.css
@@ -105,3 +105,7 @@ md-button{
 table thead tr th {
   padding-bottom: 20px;
 }
+
+md-list-item:nth-child(even) {
+	background:rgba(158,158,158,0.1);
+}
