--- a/public/assets/css/app_estilo.css
+++ b/public/assets/css/app_estilo.css
@@ -113,7 +113,7 @@ md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolb
 
 #mapAdmin {
   width: 30%; 
-  height: 55%; 
+  height: 50%; 
   position: absolute;
 }
 
@@ -134,6 +134,36 @@ md-list-item:nth-child(even) {
 }
 
 .mySelect md-select-menu {
-  margin-left: 50px;
-  margin-top: 50px;
+  margin-top: 45px !important;
+}
+
+.md-toolbar-tools-estilo3 {
+  background-color: #ff5722;
+}
+
+#formulariosAdmin {
+  margin-top: 80px;
+}
+
+.login_form {
+  width: 320px;
+  margin: 4em auto;
+  padding: 3em 2em 2em 2em;
+  background: #fafafa;
+  border: 1px solid #ebebeb;
+  box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+  margin-bottom: 45px; 
+  max-height: 100%;
+}
+
+.group { 
+  position: relative; 
+}
+
+.md-button-estilo2 {
+  position: relative;
+  display: inline-block;
+  padding: 12px 24px;
+  width: 100%;
+  margin: auto;
 }
